--- a/assets/style.css
+++ b/assets/style.css
@@ -22,14 +22,60 @@
 html,body{ 
 	width:100%;
 	height:100%;
-	background:#111;
+	background:#ffffff;
+}
+h1{
+   font-family: 'Raleway';
+   font-size: 2em;
+}
+h2{
+   font-family: 'Raleway';
+   font-size: 3em;
+   margin-bottom: 1em;
+}
+#linkedin{
+   position: fixed;
+   top: 50%;
+   left:20%;
+   width:48px;
+   height:48px;
+   color:black;
+}
+#github{
+   position: fixed;
+   top: 50%;
+   left:22%;
+   width:48px;
+   height:48px;
+   color:black;
+}
+#instagram{
+   position: fixed;
+   top: 50%;
+   left:24%;
+   width:48px;
+   height:48px;
+   color:black;
+}
+#facebook{
+   position: fixed;
+   top: 50%;
+   left:26%;
+   width:48px;
+   height:48px;
+   color:black;
+}
+#greeting{
+   position:fixed;
+   top:30%;
+   left:20%;
 }
 #particles-js{
-    width: 100%;
-    height: 100%;
-    background-color: #000000;
-    background-image: url('');
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-  }
+   width: 100%;
+   height: 100%;
+   background-color: #ffffff;
+   background-image: url('');
+   background-size: cover;
+   background-position: 50% 50%;
+   background-repeat: no-repeat;
+}
