--- a/assets/style.css
+++ b/assets/style.css
@@ -31,45 +31,89 @@ h1{
 h2{
    font-family: 'Raleway';
    font-size: 3em;
-   margin-bottom: 1em;
+   margin-top: 0.3em;
+   margin-bottom: 0.3em;
+}
+#mail{
+   position: fixed;
+   top: 55%;
+   left:20%;
+   width:48px;
+   height:48px;
+   color:black;
 }
 #linkedin{
    position: fixed;
-   top: 50%;
-   left:20%;
+   top: 55%;
+   left:22%;
    width:48px;
    height:48px;
    color:black;
 }
 #github{
    position: fixed;
-   top: 50%;
-   left:22%;
+   top: 55%;
+   left:24%;
    width:48px;
    height:48px;
    color:black;
 }
 #instagram{
    position: fixed;
-   top: 50%;
-   left:24%;
+   top: 55%;
+   left:26%;
    width:48px;
    height:48px;
    color:black;
 }
 #facebook{
    position: fixed;
-   top: 50%;
-   left:26%;
+   top: 55%;
+   left:28%;
    width:48px;
    height:48px;
    color:black;
 }
 #greeting{
    position:fixed;
-   top:30%;
+   top:35%;
    left:20%;
 }
+img{
+   width: 400px;
+   height: 400px;
+   border-radius: 50%;
+   position: fixed;
+   top: 30%;
+   right: 20%;
+}
+.topnav {
+   position: fixed;
+   top: 0%;
+   left: 89%;
+   overflow: hidden;
+   font-family: 'Raleway';
+ }
+ 
+.topnav a {
+   float: left;
+   color: black;
+   text-align: center;
+   padding: 14px 16px;
+   text-decoration: none;
+   font-size: 17px;
+}
+ 
+.topnav a:hover {
+   background-color: #ddd;
+   color: black;
+}
+
+.topnav a.active {
+  background-color: red;
+  color: white;
+}
+
 #particles-js{
    width: 100%;
    height: 100%;
